Fixed bug where login would get stuck inside the top of screen. Now it doesn't work on mobile.

--- a/public/root/styles/public.css
+++ b/public/root/styles/public.css
@@ -1,7 +1,7 @@
 .login-wrapper {
 
     width: 100%;
-    height: 80%;
+    height: auto;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -10,7 +10,8 @@
 
 .login-container {
 
-    position: relative;
+    top: 2rem;
+    position: absolute;
     height: auto;
     margin: 1rem;
     width: 20rem;
